--- a/WhiteLagoon.Web/Views/Villa/Create.cshtml
+++ b/WhiteLagoon.Web/Views/Villa/Create.cshtml
@@ -1,5 +1,5 @@
 ﻿
-@model WhiteLagoon.Domain.Entities.Villa
+@model Villa
    <div class="w-100 card border-0 p-4">
       <div class="card-header bg-success bg-gradient ml-0  py-3">
          <div class="row">
