--- a/WhiteLagoon.Web/Views/Villa/Update.cshtml
+++ b/WhiteLagoon.Web/Views/Villa/Update.cshtml
@@ -1,15 +1,15 @@
 ﻿
-@model WhiteLagoon.Domain.Entities.Villa
+@model Villa
 
 <div class="w-100 card border-0 p-4">
-   <div class="card-header bg-success bg-gradient ml-0  py-3">
-      <div class="row">
-         <div class="col-12 text-center">
-            <h2 class="text-white py-2">Create Villa</h2>
-         </div>
-      </div>
-
-   </div>
+    <div class="card-header bg-success bg-gradient ml-0 py-3">
+        <div class="row">
+            <div class="col-12 text-center">
+                <h2 class="text-white py-2">Modify Villa</h2>
+            </div>
+        </div>
+    </div>
+    
    <div class="card-body border p-4 ">
       <form method="post" class="row">
          <input hidden asp-for="Id" />
