--- a/WhiteLagoon.Web/Views/Shared/_Layout.cshtml
+++ b/WhiteLagoon.Web/Views/Shared/_Layout.cshtml
@@ -34,6 +34,9 @@
                         <li class="nav-item">
                             <a class="nav-link " asp-controller="villaNumber" asp-action="index">Villa Number</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link " asp-controller="Amenity" asp-action="index">Amenity</a>
+                        </li>
                     </ul>
                 </div>
             </div>
