Setting HomePage Content

--- a/WhiteLagoon.Web/Views/Shared/_Layout.cshtml
+++ b/WhiteLagoon.Web/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light  border-bottom box-shadow">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">
                     <img src="~/images/resort.png" style="width:35px;" /></a>
@@ -25,25 +25,27 @@
                         <li class="nav-item">
                             <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link " asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+                        
+                        <li class="nav-item dropdown">
+                            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Content Management
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li>  <a class="dropdown-item " asp-controller="villa" asp-action="index">Villa</a></li>
+                                <li> <a class="dropdown-item" asp-controller="villaNumber" asp-action="index">Villa Number</a></li>
+                                <li><hr class="dropdown-divider"></li>
+                                <li> <a class="dropdown-item" asp-controller="Amenity" asp-action="index">Amenity</a></li>
+                            </ul>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link " asp-controller="villa" asp-action="index">Villa</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " asp-controller="villaNumber" asp-action="index">Villa Number</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link " asp-controller="Amenity" asp-action="index">Amenity</a>
-                        </li>
+                
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    @* body *@
+    <div >
+        <main role="main">
            <partial name="_Notification" />
             @RenderBody()
         </main>
@@ -55,8 +57,7 @@
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.1/js/bootstrap.min.js" integrity="sha512-fHY2UiQlipUq0dEabSM4s+phmn+bcxSYzXP4vAXItBvBHU7zAM/mkhCZjtBEIJexhOMzZbgFlPLuErlJF2b+0g==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-sH8JPhKJUeA9PWk3eOcOl8U+lfZTgtBXD41q6cO/slwxGHCxKcW45K4oPCUhHG7NMB4mbKEddVmPuTXtpbCbFA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
