--- a/WhiteLagoon.Web/Views/Account/Login.cshtml
+++ b/WhiteLagoon.Web/Views/Account/Login.cshtml
@@ -13,6 +13,7 @@
                 <div class="col-md-12">
                     <section>
                         <form method="post">
+                            <input asp-for="RedirectUrl" hidden />
                             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                             <div class="form-floating mb-3">
                                 <input asp-for="Email" class="form-control" aria-required="true" />
@@ -36,10 +37,10 @@
                             </div>
                             <div class="d-flex justify-content-between pt-2">
                                 <p>
-                                    <a>Forgot your password?</a>
+                                    <a asp-action="forgetpassword">Forgot your password?</a>
                                 </p>
                                 <p>
-                                    <a>Register as a new user</a>
+                                    <a asp-action="register" asp-route-returnUrl="@Model.RedirectUrl">Register as a new user</a>
                                 </p>
                             </div>
                         </form>
