--- a/WhiteLagoon.Web/Views/Account/Register.cshtml
+++ b/WhiteLagoon.Web/Views/Account/Register.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="container pt-5">
+﻿@model RegisterVM
+
+<div class="container pt-5">
     <div class="card shadow border ">
         <div class="card-header bg-success bg-gradient ml-0 py-4">
             <div class="row">
@@ -11,31 +13,40 @@
             <div class="row pt-3">
                 <div class="col-md-12">
                     <form class="row" method="post">
+                       <input asp-for="RedirectUrl" hidden />
+                        <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
                         <div class="form-floating mb-3 col-md-12">
-                            <input class="form-control" aria-required="true" />
-                            <label class="ms-2 text-muted">Email</label>
+                            <input asp-for="Name" class="form-control" aria-required="true" />
+                            <label asp-for="Name" class="ms-2 text-muted"></label>
+                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
-                            <input class="form-control" />
-                            <label class="ms-2 text-muted">Full Name</label>
+                            <input asp-for="Email" class="form-control" />
+                            <label asp-for="Email" class="ms-2 text-muted"></label>
+                            <span asp-validation-for="Email" class="text-danger"></span>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
-                            <input class="form-control" />
-                            <label class="ms-2 text-muted">Phone Number</label>
+                            <input asp-for="PhoneNumber" class="form-control" />
+                            <label asp-for="PhoneNumber" class="ms-2 text-muted"></label>
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
-                            <input class="form-control" />
-                            <label class="ms-2 text-muted">Password</label>
+                            <input asp-for="Password" class="form-control" />
+                            <label asp-for="Password" class="ms-2 text-muted"></label>
+                            <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
-                            <input class="form-control" />
-                            <label class="ms-2 text-muted">Confirm Password</label>
+                            <input asp-for="ConfirmPassword" class="form-control" />
+                            <label asp-for="ConfirmPassword" class="ms-2 text-muted"></label>
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
                         </div>
 
                         <div class="form-floating mb-3 col-md-6">
-                            <select class="form-select">
+                            <select asp-for="Role" asp-items="@Model.RoleList" class="form-select">
                                 <option disabled selected>-Select Role-</option>
                             </select>
+
                         </div>
                         <div class="col-12">
                             <button type="submit" class="w-100 btn btn-lg btn-outline-success">Register</button>
@@ -47,3 +58,9 @@
     </div>
 
 </div>
+
+@section scripts {
+    @{
+        <partial name="_ValidationScriptsPartial" />
+    }
+}
