Booking and Stripe Payment Method

--- a/WhiteLagoon.Web/Views/Shared/_VillaListPartial.cshtml
+++ b/WhiteLagoon.Web/Views/Shared/_VillaListPartial.cshtml
@@ -30,7 +30,11 @@
                                 {
                                     if (villa.IsAvailable)
                                     {
-                                        <a class="btn btn-success form-control btn-block">
+                                        <a asp-action="FinalizeBooking" asp-controller="booking"
+                                        asp-route-villaId="@villa.Id"
+                                           asp-route-checkInDate="@Model.CheckInDate"
+                                           asp-route-nights="@Model.Nights"
+                                           class="btn btn-success form-control btn-block">
                                             Book
                                         </a>
                                     }
