--- a/WhiteLagoon.Web/Views/Shared/_Layout.cshtml
+++ b/WhiteLagoon.Web/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
    <link rel="stylesheet" href="~/WhiteLagoon.Web.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.css" integrity="sha512-vKMx8UnXk60zUwyUnUPM3HbQo8QfmNx7+ltw8Pm5zLusl1XIfwcxo8DbWCqMGKaWeNxWA8yrx5v3SaVpMvR3CA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="~/css/spinner.css" rel="stylesheet" />
+    <link rel="stylesheet" src="//cdn.datatables.net/1.13.7/css/jquery.dataTables.min.css" />
 </head>
 <body>
     <header>
@@ -32,10 +33,11 @@
                                 Content Management
                             </a>
                             <ul class="dropdown-menu">
-                                <li>  <a class="dropdown-item " asp-controller="villa" asp-action="index">Villa</a></li>
+                                <li> <a class="dropdown-item " asp-controller="villa" asp-action="index">Villa</a></li>
                                 <li> <a class="dropdown-item" asp-controller="villaNumber" asp-action="index">Villa Number</a></li>
-                                <li><hr class="dropdown-divider"></li>
+                                <li> <hr class="dropdown-divider"></li>
                                 <li> <a class="dropdown-item" asp-controller="Amenity" asp-action="index">Amenity</a></li>
+                                <li> <a class="dropdown-item" asp-controller="booking" asp-action="index" asp-route-status="@SD.StatusApproved">Bookings</a></li>
                             </ul>
                         </li>
                 
@@ -62,6 +64,7 @@
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.0.1/js/bootstrap.bundle.min.js" integrity="sha512-sH8JPhKJUeA9PWk3eOcOl8U+lfZTgtBXD41q6cO/slwxGHCxKcW45K4oPCUhHG7NMB4mbKEddVmPuTXtpbCbFA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="//cdn.datatables.net/1.13.7/js/jquery.dataTables.min.js" asp-append-version="true"></script>
     @* jquery.unobtrusive-ajax *@
     @* <script src="~/js/jquery.unobtrusive-ajax.min.js"></script> *@
     @await RenderSectionAsync("Scripts", required: false)
