--- a/WhiteLagoon.Web/Views/_ViewImports.cshtml
+++ b/WhiteLagoon.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,6 @@
 @using WhiteLagoon.Web.Models
 @using WhiteLagoon.Domain.Entities
 @using WhiteLagoon.Web.ViewModels
+@using WhiteLagoon.Application.Common.utility
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
