--- a/WhiteLagoon.Web/Views/Booking/BookingDetails.cshtml
+++ b/WhiteLagoon.Web/Views/Booking/BookingDetails.cshtml
@@ -26,15 +26,23 @@
         </div>
         <div class="col-12 col-lg-6 p-4 2 mt-4 mt-md-0" style="border-left:1px solid #aaa">
             <form method="post">
+                <input asp-for="Id"  style="display:hidden;"/>
+                <input asp-for="VillaId" hidden />
+                <input asp-for="UserId" hidden />
+             
+                <input asp-for="CheckInDate" hidden />
+                <input asp-for="CheckOutDate" hidden />
+                <input asp-for="Nights" hidden />
+
 
                 <div class="row pt-1 mb-3 " style="border-radius:20px; ">
                     <div class="col-6">
                         <h3 class="text-success">Enter Booking Details</h3>
                     </div>
-                   @if ((Model.Status==SD.StatusPending||Model.Status==SD.StatusApproved)&&User.IsInRole(SD.Role_Admin))
+                    @if ((Model.Status == SD.StatusPending || Model.Status == SD.StatusApproved) && User.IsInRole(SD.Role_Admin))
                     {
                         <div class="col-6">
-                            <button type="submit" class="btn btn-sm btn-outline-danger form-control my-1"><i class="bi bi-x-circle"></i> &nbsp; Cancel Booking</button>
+                            <button type="submit" asp-controller="booking" asp-action="CancekBooking" class="btn btn-sm btn-outline-danger form-control my-1"><i class="bi bi-x-circle"></i> &nbsp; Cancel Booking</button>
                         </div>
                     }
                 </div>
@@ -54,7 +62,7 @@
                         <input asp-for="Email" class="form-control" />
                         <span asp-validation-for="Email" class="text-danger"></span>
                     </div>
-                    
+
                     <div class="form-group pt-2 col-6">
                         <label class="text-warning">No. of nights</label>
                         <input asp-for="Nights" disabled class="form-control" />
@@ -64,7 +72,7 @@
                         <input asp-for="Status" disabled class="form-control" />
                     </div>
                     <div class="form-group pt-2 col-6">
-                        <label  class="text-warning">Booking Date</label>
+                        <label class="text-warning">Booking Date</label>
                         <input asp-for="BookingDate" disabled class="form-control" />
                     </div>
                     <div class="form-group pt-2 col-6">
@@ -86,6 +94,33 @@
                         <input asp-for="ActualCheckOutDate" disabled class="form-control" />
                     </div>
 
+                    @if (Model.Status == SD.StatusApproved && User.IsInRole(SD.Role_Admin))
+                    {
+                        <div class="form-group pt-2 col-6">
+
+                            <label class="text-danger" asp-for="VillaNumber"></label>
+                            <select class="form-select" asp-for="VillaNumber">
+                                @foreach (var item in Model.VillaNumbers)
+                                {
+                                    <option value="@item.Villa_Number">@item.Villa_Number</option>
+                                }
+                            </select>
+
+                        </div>
+
+                    }
+                    else
+                    {
+                        if (Model.Status == SD.StatusCheckedIn || Model.Status == SD.StatusCompleted)
+                        {
+                            <input asp-for="VillaNumber" hidden />
+                            <div class="form-group pt-2 col-6">
+                                <label class="text-warning" asp-for="VillaNumber"></label>
+                                <input asp-for="VillaNumber" disabled class="form-control" />
+                            </div>
+                        }
+                    }
+
                     @if (User.IsInRole(SD.Role_Admin))
                     {
                         <div class="form-group pt-2 col-6">
@@ -100,19 +135,23 @@
                             <label class="text-warning">Payment Date</label>
                             <input asp-for="PaymentDate" disabled class="form-control" />
                         </div>
+                        <div class="form-group pt-2 col-6">
+                            <label class="text-warning">Status</label>
+                            <input asp-for="Status" disabled class="form-control" />
+                        </div>
                     }
 
                 </div>
-              @if (User.IsInRole(SD.Role_Admin))
+                @if (User.IsInRole(SD.Role_Admin))
                 {
                     <div class="form-group pt-2 pt-md-4">
                         @if (Model.Status == SD.StatusApproved)
                         {
-                            <button type="submit" class="btn btn-warning form-control my-1"><i class="bi bi-check2-square"></i> &nbsp; Check In</button>
+                            <button type="submit" asp-controller="booking" asp-action="CheckIn" class="btn btn-warning form-control my-1"><i class="bi bi-check2-square"></i> &nbsp; Check In</button>
                         }
                         @if (Model.Status == SD.StatusCheckedIn)
                         {
-                            <button type="submit" class="btn btn-success form-control my-1"><i class="bi bi-clipboard2-check"></i> &nbsp; Check Out / Complete Booking</button>
+                            <button type="submit" asp-controller="booking" asp-action="CheckOut" class="btn btn-success form-control my-1"><i class="bi bi-clipboard2-check"></i> &nbsp; Check Out / Complete Booking</button>
                         }
 
 
